[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemy/enemy_hack_stop.gd" type="Script" id=1]
[ext_resource path="res://enemy/gun_enemy.gd" type="Script" id=2]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 0.886275, 0, 0, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=3]

[sub_resource type="CylinderShape" id=4]

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "transform"
tracks/0/path = NodePath("guns")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.5, 1, 0, 0, 0, 0, 1, 0, -1.62921e-07, 1, 1, 1, 1, 1, 0, 0, 0, 0, 3.25841e-07, 0, 1, 1, 1, 1 )

[node name="enemy_hack_stop" type="KinematicBody" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="guns" type="Spatial" parent="."]
transform = Transform( -0.188861, 0, -0.982004, 0, 1, 0, 0.982004, 0, -0.188861, 0, 0, 0 )

[node name="gun" type="Spatial" parent="guns"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 1.19018, 0, 0 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="guns/gun"]
wait_time = 0.2
one_shot = true

[node name="gun2" type="Spatial" parent="guns"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -1.12187, 0, 0 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="guns/gun2"]
one_shot = true

[node name="gun3" type="Spatial" parent="guns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.15375 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="guns/gun3"]
one_shot = true

[node name="gun4" type="Spatial" parent="guns"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 1.08053 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="guns/gun4"]
one_shot = true

[node name="MeshInstance2" type="MeshInstance" parent="guns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.28728, 0, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotate"
anims/rotate = SubResource( 5 )
